[gd_scene load_steps=9 format=3 uid="uid://bwcdlpled0vwh"]

[ext_resource type="Texture2D" uid="uid://djsmqbfl8h22n" path="res://assets/textures/uis/inventory.png" id="1"]
[ext_resource type="Script" path="res://src/uis/Inventory/Inventory.gd" id="2"]
[ext_resource type="FontFile" uid="uid://dero3d0outurp" path="res://assets/font/Terminus TTF Bold.ttf" id="3"]
[ext_resource type="AudioStream" uid="uid://b1gqad6er4ckb" path="res://assets/sounds/inventory/inventory_selector_move.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://c510fu545ycpw" path="res://assets/sounds/inventory/inventory_open.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://yrr03shejqd2" path="res://assets/sounds/inventory/inventory_add_item.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://bjifcxx3b3mde" path="res://assets/sounds/inventory/inventory_close.wav" id="7_jkuq4"]

[sub_resource type="LabelSettings" id="LabelSettings_hmg4v"]
font = ExtResource("3")
font_size = 8
font_color = Color(0, 0, 0, 1)

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 305.0
offset_bottom = 146.0
scale = Vector2(0.65, 0.65)
texture = ExtResource("1")

[node name="ItemDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_right = 195.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_hmg4v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventorySlots" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 37.0
offset_right = 192.0
offset_bottom = 89.0
columns = 2

[node name="InventorySelectorMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")

[node name="InventorySelectorSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="InventoryAddItem" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[node name="InventoryOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="InventoryClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jkuq4")
